src/test/ui/rust-2018/async-ident.stderr
error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:7:4
   |
LL | fn async() {}
   |    ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
note: lint level defined here
  --> $DIR/async-ident.rs:2:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:13:7
   |
LL |     ($async:expr, async) => {};
   |       ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:13:19
   |
LL |     ($async:expr, async) => {};
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:22:6
   |
LL | foo!(async);
   |      ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:32:11
   |
LL |     trait async {}
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:37:10
   |
LL |     impl async for MyStruct {}
   |          ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:44:12
   |
LL |     static async: u32 = 0;
   |            ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:51:11
   |
LL |     const async: u32 = 0;
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:58:15
   |
LL | impl Foo { fn async() {} }
   |               ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:64:12
   |
LL |     struct async {}
   |            ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:68:9
   |
LL |     let async: async = async {};
   |         ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:68:16
   |
LL |     let async: async = async {};
   |                ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:68:24
   |
LL |     let async: async = async {};
   |                        ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:82:19
   |
LL |     () => (pub fn async() {})
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:90:6
   |
LL |     (async) => (1)
   |      ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: aborting due to 15 previous errors

